apps/architecture-portal/versioned_docs/version-1.0.53.0/hosts/core-cli.mdx
---
title: Core CLI Host
area: hosts
status: implemented
owners: [hosts]
host: core-cli
source_paths: [apps/core-cli, tests/host/cli_test.py]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity kind="hosts" id="core-cli" />

## 目的
Core CLI 提供脚本友好的命令行入口，经 Application Facade 执行 Project v5、Pattern/Sequence、Pattern Slot、Performance、Sound Set、Sample quota、恢复、Cook、渲染与 Proof 操作。本 Build 起，Workspace 本地 Sound Set Catalog 的 `soundset.catalog.list`、`soundset.inspect`、`soundset.map.preview`、`soundset.install` 与 `soundset.audition` 同样经此入口可达；CLI 自身不含网络代码，Catalog 是 Workspace 下的内容寻址目录与索引。Project Truth 的当前写出契约是 `lmdj.project.v5`，v1/v2/v3/v4 仅作为只读迁移输入。
## 边界
CLI 负责参数/JSONL/退出码，并且是对 Facade 的薄有界 JSON 透传：`command`/`query` 单次调用读 `--request JSON` 或 `--request-file FILE`，`session` 模式按行读取只含 `surface` 与 `request` 两个键的有界信封，再原样交给 `Application::command` / `Application::query`。CLI 不维护 per-operation 分派表，因此整套 `performance.*` 操作集（`performance.record.begin` / `record.event` / `record.launch-request` / `record.flush` / `record.stop` / `record.status`、`performance.save` / `discard` / `recording.bind`、`performance.list` / `inspect` / `rename` / `delete`、`performance.replay.begin` / `replay.status` / `replay.stop`、`performance.recovery.list` / `recovery.apply` / `recovery.discard` 与 `performance.resample.commit`）经同一信封抵达，共二十个操作。`sample.quota` 直接返回 Facade 的 revision-bound Bank/Project headroom，CLI 不解析 Project Bundle、不复算配额，也不重写 `BANK_QUOTA_EXHAUSTED` / `PROJECT_QUOTA_EXHAUSTED` 的公共详情；Performance 的 revision、录制 authority、launch acknowledgement 与 replay 结论同样只由 Facade 决定。
## 数据流
stdin/参数 → CLI adapter → Facade → 规范 JSON/Artifact 输出。CLI 用 `make_headless_performance_runtime_bridge(make_steady_performance_time_source())` 构造无设备的 Performance runtime bridge，向 `ApplicationConfig` 提供 clock、input sequencer、launch acknowledger 与 replay controller，并在每次请求分派前调用 `bridge.service()` 推进这些 Facade 拥有的协作者。它不是实时音频数据面。
## 测试与证据
`tests/host/cli_test.py` 覆盖协议、Sample quota、错误和快照输出；版本来自 Host manifest。
## 限制
CLI 是工程 Host，不等同于最终创作者 GUI。headless bridge 使用 steady time source 而非音频设备时钟，Performance 操作在 CLI 上的可用性只证明控制面与状态边界，不构成任何物理演奏、听感或延迟验收，也不表示 tag、Release、部署或 Channel promotion 已发生。

## Provider 输入 owner 与会话权限

Host 通过 Facade 提供 `provider.list`、`provider.permissions.configure`、
`provider.select`、`provider.run` 和 `attempt.inspect`。输入必须先成为 Project Asset；
owner 绑定完整 Artifact identity，读取与完整性检查由 Core 在 writer lease 内完成。
权限配置替换当前会话的 grant，重启恢复默认 Proof 权限；选择 Provider 不自动授权。
Slice 参考运行使用显式 `sample.slice.execute` grant 和既有 `test` 平台 token。
成功或失败保存在 Attempt，重启后可检查；执行不改写 Project Truth。
用户切片界面、结果采纳与生产质量选择仍未交付。当前身份由上方 Build Identity 派生。

CLI 使用同一 `session` 进程顺序配置权限、选择和运行；独立进程不继承 grant。
